# robotics-lab-1.2-1.5-motor_control

./: .gitignore
ras_lab1_cartesian_controllers/: CMakeLists.txt  package.xml
ras_lab1_cartesian_controllers/src/: circle_cartesian_controller.cpp  line_cartesian_controller.cpp  wall_following_controller.cpp
ras_lab1_controllers/: package.xml
ras_lab1_motor_controller/: CMakeLists.txt  package.xml
ras_lab1_motor_controller/include/ras_lab1_motor_controller/: general_functions.h  pid_controller.h
ras_lab1_motor_controller/src/: .motor_controller.cpp.swp  motor_controller.cpp
ras_lab1_open_loop_control/: CMakeLists.txt  package.xml
ras_lab1_open_loop_control/src/: open_loop_controller.cpp
