<?xml version="1.0"?>
<package>
  <name>ras_lab1_cartesian_controllers</name>
  <version>0.1.0</version>
  <description>Controllers for moving the robot.</description>
  <maintainer email="mathlin@kth.se">Mathias Lindblom</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>

